2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in,
	  fedora/10-dfu-programmer.fdi, configure.ac, NEWS,
	  AUTHORS, src/arguments.c, src/arguments.h,
	  docs/dfu-programmer.1: Updated to the new 0.5.3 release.

2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h,
	  fedora/10-dfu-programmer.fdi,
	  doc/dfu-programmer.1: Added support for at32uc3c chips.

2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/commands.c: Apply fix suggested by bug 3017901.  Fix
	  an off by 1 error for the bootloader size.

2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/intel_hex.c: Apply fix suggested by bug 3016469.  Fix
	  a sign extension problem during reading in the data to
	  flash.

2010-05-02 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* AUTHORS, src/commands.c: Removed confusing & useless code
	  that Darren Gibbs found.

2010-04-08 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* AUTHORS, src/arguments.c, src/arguments.h
	  doc/dfu-programmer.1: Added the patch Mitko sent
	  to enable at32uc3b1512 and at32uc3b0512 chips.

2010-02-15 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* config.h.in, configure.ac, AUTHORS, src/commands.c,
	  src/dfu.c, src/dfu-device.h, src/dfu.h, src/main.c:
	  Added the patch Torsten Rottmann sent to enable
	  libusb 1.0 support, plus I some changes to allow for
	  switching via a configure file flag.

2010-02-15 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, dfu-programmer.1,
	  AUTHORS: Added the patch Dave Fletcher sent to
	  enable atmega32u2 support.

2009-09-09 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/commands.c: Fix a bug due to the order of the
	  bootloader suppression and the lower boundary
	  verification.  Additionally, fixed an off by 1 error
	  in the flash address verification.

2009-08-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>