@@ -1,3 +1,7 @@
+2011-09-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
+	* src/dfu.c: Apply fix suggested by bug 340959.  Increase
+	  the timeout to support the automotive AVR32 chips.
+
 2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
 	* fedora/dfu-programmer.spec.in,
 	  fedora/10-dfu-programmer.fdi, configure.ac, NEWS,
